name:                kbdSVGGen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mryndzionek/kbdSVGGen#readme
license:             GPL-3
license-file:        LICENSE
author:              Mariusz Ryndzionek
maintainer:          mryndzionek@gmail.com
copyright:           2019 Mariusz Ryndzionek
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kbdSVGGen
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2 -freverse-errors
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, TemplateHaskell
  build-depends:       base >= 4.7 && < 5, sort, diagrams, diagrams-lib,
                       diagrams-svg, diagrams-contrib, SVGFonts, svg-tree,
                       mtl, lens, monad-parallel, process, directory, SVGFonts,
                       time, uuid
